# psketcher

./: CMakeLists.txt  INSTALL  Makefile.am  ProjectHome.md  configure  configure.in  occviewer.glade
src/: CMakeLists.txt  Makefile.am  OccGtkGLView.cpp  Support.cpp  psketcher.files  psketcher.includes
src/ConstraintSolver/: AngleLine2D.cpp  AngleLine2D.h  Arc2D.cpp  Arc2D.h  Ark3DModel.cpp  Ark3DModel.h  CMakeLists.txt  Circle2D.cpp  Circle2D.h  ConstraintEquationBase.cpp  ConstraintEquationBase.h  ConstraintEquations.cpp  ConstraintEquations.h  ConstraintEquations.h.template  ConstraintSolver.cpp  ConstraintSolver.h  DOF.cpp  DOF.h  DependentDOF.cpp  DependentDOF.h  DistancePoint.h  DistancePoint2D.cpp  DistancePoint2D.h  DistancePointLine2D.cpp  DistancePointLine2D.h  Edge2DBase.cpp  Edge2DBase.h  EdgeLoop2D.cpp  EdgeLoop2D.h  HoriVertLine2D.cpp  HoriVertLine2D.h  IndependentDOF.cpp  IndependentDOF.h  Line.cpp  Line.h  Line2D.cpp  Line2D.h  ModelWorkspace.h  ParallelLine.cpp  ParallelLine.h  (+31 more)
src/InteractiveConstructors/: AngleLine2DConstructor.cpp  AngleLine2DConstructor.h  Arc2DConstructor.h  CMakeLists.txt  Circle2DConstructor.h  Distance2DConstructor.cpp  Distance2DConstructor.h  DistancePoint2DConstructor.cpp  DistancePoint2DConstructor.h  GtkEventProperties.cpp  GtkEventProperties.h  HoriVertLine2DConstructor.cpp  InteractiveConstructorBase.cpp  InteractiveConstructorBase.h  Line2DConstructor.cpp  Line2DConstructor.h  ParallelLine2DConstructor.cpp  ParallelLine2DConstructor.h  Point2DConstructor.cpp  Point2DConstructor.h  QtEventProperties.cpp  QtEventProperties.h
src/Interface/: Ark3DWidget.cpp  Ark3DWidget.h  Ark3DWindow.cpp  Ark3DWindow.h  CMakeLists.txt  Callbacks.cpp  Callbacks.h  OccGtkGLView.cpp  OccGtkGLView.h  Point2DEditDialog.cpp  Point2DEditDialog.h  main.cpp  pSketcherWidget.h  pSketcherWindow.cpp  qocc.qrc
src/LuaBinding/: CMakeLists.txt  ark3d_module.i  ark3d_moduleLUA_wrap.cxx  ark3d_module_wrap.cxx  swigluarun.h
src/LuaScripts/: test_sketch.lua
src/NumOptimization/: bfgs.cpp  bfgs.h
src/OpenCascadeBinding/: CMakeLists.txt  CascadePrimitives.h  OcPrimitives.cpp  OcPrimitives.h  OccArc2D.cpp  OccDistancePoint2D.h  OccLine2D.cpp  OccPoint.h  OccPrimitives.cpp  OccPrimitives.h  OccSketch.cpp  OccSketch.h  QtDistancePoint2D.cpp  QtLine2D.h  QtParallelLine2D.cpp  QtPoint.cpp  QtPoint2D.cpp  QtTangentEdge2D.cpp  test.cpp
src/PythonBinding/: CMakeLists.txt  interface_definition.py  python_bindings.cpp
src/QtBinding/: CMakeLists.txt  DisplayProperties.cpp  DisplayProperties.h  QtAngleLine2D.cpp  QtAngleLine2D.h  QtArc2D.cpp  QtArc2D.h  QtCircle2D.cpp  QtCircle2D.h  QtCommon.h  QtDistancePoint2D.cpp  QtDistancePoint2D.h  QtDistancePointLine2D.cpp  QtDistancePointLine2D.h  QtHoriVertLine2D.cpp  QtHoriVertLine2D.h  QtLine.cpp  QtLine2D.cpp  QtLine2D.h  QtParallelLine2D.cpp  QtParallelLine2D.h  QtPoint.cpp  QtPoint.h  QtPoint2D.cpp  QtPoint2D.h  QtPrimitiveBase.cpp  QtPrimitiveBase.h  QtPrimitives.h  QtSketch.cpp  QtSketch.h  QtTangentEdge2D.cpp  QtTangentEdge2D.h  test.cpp
src/QtInterface/: Ark3DWidget.cpp  Ark3DWidget.h  Ark3DWindow.cpp  Ark3DWindow.h  CMakeLists.txt  qoccharnesswindow.h  qoccviewwidget.cpp  qoccviewwidget.h
src/dime/: Basic.h
src/mmcMatrix/: mmcMatrix.cpp  mmcMatrix.h
src/mono/: AssemblyInfo.cs  Main.cs  pSketcher.sln  pSketcher.userprefs
src/mono/CairoBinding/: ModelViewer.cs
src/mono/ConstraintEquation/: VerticalLine2D.cs
src/mono/ConstraintSolver/: AngleLine2D.cs  ConstraintEquation.cs  DistancePointLine2D.cs  HorizontalLine2D.cs  ParallelLine2D.cs  Primitive2D.cs  SketchPlane.cs  TangentEdge2D.cs
src/mono/NumericalOptimization/: MeritFunction.cs
src/mono/gtk-gui/: window1.cs
src/python_test/: model.py  primitives.py  test_sketch.py
trunk/: CMakeLists.txt  INSTALL  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
trunk/Interface/: Callbacks.h
trunk/autom4te.cache/: output.0  requests
trunk/po/: POTFILES.in
trunk/res/: ark3d.glade
trunk/src/: Callbacks.cpp  Makefile.in  OccGtkGLView.h  main.cpp
trunk/src/ConstraintSolver/: AngleLine2D.cpp  AngleLine2D.h  Arc2D.cpp  Arc2D.h  Ark3DModel.cpp  Ark3DModel.h  CMakeLists.txt  Circle2D.cpp  Circle2D.h  ConstraintEquationBase.cpp  ConstraintEquationBase.h  ConstraintEquations.cpp  ConstraintEquations.h  ConstraintSolver.cpp  ConstraintSolver.h  DOF.cpp  DOF.h  DependentDOF.cpp  DependentDOF.h  DistancePoint.cpp  DistancePoint.h  DistancePoint2D.cpp  DistancePoint2D.h  DistancePointLine2D.cpp  DistancePointLine2D.h  Edge2DBase.cpp  Edge2DBase.h  EdgeLoop2D.cpp  EdgeLoop2D.h  HoriVertLine2D.cpp  HoriVertLine2D.h  IndependentDOF.cpp  IndependentDOF.h  Line.cpp  Line.h  Line2D.cpp  Line2D.h  ModelWorkspace.h  ParallelLine.cpp  ParallelLine2D.cpp  (+30 more)
trunk/src/InteractiveConstructors/: AngleLine2DConstructor.cpp  AngleLine2DConstructor.h  Arc2DConstructor.cpp  Arc2DConstructor.h  CMakeLists.txt  Circle2DConstructor.cpp  DistancePoint2DConstructor.cpp  DistancePoint2DConstructor.h  GtkEventProperties.cpp  GtkEventProperties.h  HoriVertLine2DConstructor.h  InteractiveConstructorBase.cpp  InteractiveConstructorBase.h  Line2DConstructor.cpp  Line2DConstructor.h  ParallelLine2DConstructor.cpp  Point2DConstructor.cpp  Point2DConstructor.h  QtEventProperties.cpp  TangentEdge2DConstructor.cpp  TangentEdge2DConstructor.h
trunk/src/Interface/: Ark3D.qrc  Ark3DWidget.cpp  Ark3DWidget.h  Ark3DWindow.cpp  Ark3DWindow.h  CMakeLists.txt  Callbacks.cpp  Callbacks.h  OccGtkGLView.cpp  OccGtkGLView.h  Point2DEditDialog.cpp  Point2DEditDialog.h  main.cpp  pSketcherWidget.cpp  pSketcherWindow.h  qocc.qrc  qoccinputoutput.cpp
trunk/src/LuaBinding/: CMakeLists.txt  ark3d_module.i  ark3d_moduleLUA_wrap.cxx  ark3d_module_wrap.cxx
trunk/src/LuaScripts/: test_sketch.lua
trunk/src/NumOptimization/: CMakeLists.txt  bfgs.cpp
trunk/src/OpenCascadeBinding/: CMakeLists.txt  OccAngleLine2D.cpp  OccCommon.h  OccLine.h  OccParallelLine2D.h  OccPrimitives.cpp  OccPrimitives.h  OccSketch.cpp  OccSketch.h  QtArc2d.h  QtPoint2D.h  test.cpp
trunk/src/PythonBinding/: CMakeLists.txt  (+2 more)
(+147 files in other folders)
